Fixed code highlight and layout issue when code inserted to the page.

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -91,8 +91,13 @@
 
   }
 
+  pre{
+    overflow: auto;
+  }
 
-
+  code, pre{
+    font-size: 0.9em;
+  }
 
 }
 
